json, shelve, timeit

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@ my_database.db
 my_train.db
 apple.csv
 appleTwo.csv
+movies.bak
+movies.dat
+movies.fir
+my_db.bak
+my_db.dat
+movies.dir
+my_db.dir
+trainFriday.bak
+trainFriday.dir
+trainFriday.dat
+employees.json
